objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <description>This is the abbreviation of the territory that is used to set the territory's name</description>
        <inlineHelpText>This is the abbreviation of the territory that is used to set the territory's name</inlineHelpText>
        <label>Abbreviation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelName__c</fullName>
        <formula>Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChildrenCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Children Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageUserID__c</fullName>
        <description>18 digit User ID of the Coverage User</description>
        <formula>CASESAFEID(Wholesaler1__r.ZoneCoverage__r.UserID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageUser__c</fullName>
        <formula>Wholesaler1__r.ZoneCoverage__r.FirstName  &amp;" "&amp;  Wholesaler1__r.ZoneCoverage__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>To track anything particular about this territory, especially when it is a manually created one to roll up hierarchies.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <externalId>true</externalId>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>HYPERLINK("/setup/own/groupdetail.jsp?id="+  GroupId__c +"&amp;setupid=PublicGroups",  "Group "+ Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalWholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Wholesaler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MARSInternalWholesalerID__c</fullName>
        <label>MARS Internal Wholesaler ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARSTerritoryMangerID__c</fullName>
        <description>This ID is on the Territory record in MARS and tied to MARS Users.</description>
        <label>MARS Territory Manger ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARSWholesaler1ID__c</fullName>
        <label>MARS Wholesaler 1 ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARSWholesaler2ID__c</fullName>
        <label>MARS Wholesaler 2 ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTerritoryChannelId__c</fullName>
        <formula>CASESAFEID(ParentTerritory__r.Channel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Territory Channel Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTerritoryChannelName__c</fullName>
        <formula>ParentTerritory__r.Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Territory Channel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTerritoryMARSName__c</fullName>
        <formula>ParentTerritory__r.TerritoryName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Territory MARS Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTerritoryName__c</fullName>
        <description>Name of the Parent Territory</description>
        <formula>ParentTerritory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTerritoryType__c</fullName>
        <formula>TEXT( ParentTerritory__r.TerritoryType__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryUserZone1__c</fullName>
        <formula>HYPERLINK('/' &amp;  Zone1__c &amp; '?noredirect=1', Zone1__r.FirstName + ' ' + Zone1__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary User Zone 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryUserZone2__c</fullName>
        <formula>HYPERLINK('/' &amp;  Zone2__c &amp; '?noredirect=1', Zone2__r.FirstName + ' ' + Zone2__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary User Zone 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryUserZone3__c</fullName>
        <formula>HYPERLINK('/' &amp;  Zone3__c &amp; '?noredirect=1', Zone3__r.FirstName + ' ' + Zone3__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary User Zone 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleGroupId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Role Group Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RoleId__c</fullName>
        <externalId>true</externalId>
        <label>Role Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>HYPERLINK( "/"+RoleId__c, "Role "+ Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TerritoryID18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To display the primary person assigned to this territory</description>
        <label>Territory Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TerritoryManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TerritoryName__c</fullName>
        <defaultValue>"Update Me"</defaultValue>
        <externalId>true</externalId>
        <label>MARS Territory Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TerritoryType__c</fullName>
        <label>Territory Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Territory</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <label>Touch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesaler2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zone3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>apex__c</fullName>
        <formula>"new Territory__c (Name='" &amp; Name &amp; "', TerritoryName__c='" &amp; TerritoryName__c &amp; "', TerritoryType__c='" &amp; TEXT( TerritoryType__c) &amp;"', Code__c='" &amp; Code__c &amp; "', Channel__c='" &amp; Channel__c &amp; "'));"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>apex</label>
        <type>Text</type>
    </fields>
    <label>Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>ADUNW</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>TerritoryType__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>MARSWholesaler1ID__c</columns>
        <columns>CoverageUser__c</columns>
        <columns>CoverageUserID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>TerritoryName__c</field>
            <operation>startsWith</operation>
            <value>ADU NORTHWEST</value>
        </filters>
        <label>ADU NORTHWEST</label>
    </listViews>
    <listViews>
        <fullName>Active_Regions</fullName>
        <columns>NAME</columns>
        <columns>TerritoryName__c</columns>
        <columns>Channel__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>InternalWholesaler__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>TerritoryType__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Regions</label>
    </listViews>
    <listViews>
        <fullName>Active_Territories</fullName>
        <columns>NAME</columns>
        <columns>TerritoryName__c</columns>
        <columns>Channel__c</columns>
        <columns>InternalWholesaler__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>Wholesaler2__c</columns>
        <columns>TerritoryManager__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>TerritoryType__c</field>
            <operation>equals</operation>
            <value>Territory</value>
        </filters>
        <label>Active Territories</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>ParentTerritory__c</columns>
        <columns>Channel__c</columns>
        <columns>TerritoryType__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>MARSWholesaler1ID__c</columns>
        <columns>CoverageUser__c</columns>
        <columns>CoverageUserID__c</columns>
        <columns>Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ChildrenCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>Department</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>Status__c</columns>
        <columns>TerritoryType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TerritoryType__c</field>
            <operation>equals</operation>
            <value>Department,Division</value>
        </filters>
        <label>Departments</label>
    </listViews>
    <listViews>
        <fullName>IAG</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>TerritoryName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>IND ADV GRP,IAG IND,IAG RIA</value>
        </filters>
        <label>IAG</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Territories</fullName>
        <columns>NAME</columns>
        <columns>TerritoryName__c</columns>
        <columns>Channel__c</columns>
        <columns>InternalWholesaler__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>Wholesaler2__c</columns>
        <columns>TerritoryManager__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>TerritoryType__c</field>
            <operation>equals</operation>
            <value>Territory</value>
        </filters>
        <label>Inactive Territories</label>
    </listViews>
    <listViews>
        <fullName>NEW</fullName>
        <columns>Channel__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>ParentTerritoryMARSName__c</columns>
        <columns>NAME</columns>
        <columns>TerritoryType__c</columns>
        <columns>Abbreviation__c</columns>
        <columns>Role__c</columns>
        <columns>RoleId__c</columns>
        <columns>Group__c</columns>
        <columns>RoleGroupId__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>TerritoryManager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Records TODAY</label>
    </listViews>
    <listViews>
        <fullName>New_This_Week</fullName>
        <columns>Channel__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>ParentTerritoryMARSName__c</columns>
        <columns>NAME</columns>
        <columns>TerritoryType__c</columns>
        <columns>Abbreviation__c</columns>
        <columns>Role__c</columns>
        <columns>RoleId__c</columns>
        <columns>Group__c</columns>
        <columns>RoleGroupId__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>TerritoryManager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New Records This Week</label>
    </listViews>
    <listViews>
        <fullName>RETIREMENT</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>TerritoryName__c</columns>
        <columns>NAME</columns>
        <columns>ParentTerritory__c</columns>
        <columns>Channel__c</columns>
        <columns>Role__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Wholesaler1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>RADU,DC</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>RETIREMENT</value>
        </filters>
        <label>RETIREMENT</label>
    </listViews>
    <listViews>
        <fullName>Regions</fullName>
        <columns>NAME</columns>
        <columns>Channel__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>Status__c</columns>
        <columns>TerritoryType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TerritoryType__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filters>
        <label>Regions</label>
    </listViews>
    <listViews>
        <fullName>SDU</fullName>
        <columns>ChannelName__c</columns>
        <columns>TerritoryType__c</columns>
        <columns>ParentTerritory__c</columns>
        <columns>NAME</columns>
        <columns>TerritoryName__c</columns>
        <columns>Role__c</columns>
        <columns>RoleGroupId__c</columns>
        <columns>RoleId__c</columns>
        <columns>Status__c</columns>
        <columns>Wholesaler1__c</columns>
        <columns>CoverageUser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SDU</value>
        </filters>
        <label>SDU</label>
        <sharedTo>
            <group>SFDC_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TEST</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>ParentTerritory__c</columns>
        <columns>Channel__c</columns>
        <columns>TerritoryType__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>MARSWholesaler1ID__c</columns>
        <columns>Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MARSTerritoryMangerID__c</columns>
        <columns>CoverageUserID__c</columns>
        <columns>ChildrenCount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>TerritoryType__c</field>
            <operation>equals</operation>
            <value>Region</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>TEST REGIONS</label>
    </listViews>
    <listViews>
        <fullName>TErritoriesnew</fullName>
        <columns>NAME</columns>
        <columns>TerritoryName__c</columns>
        <columns>Channel__c</columns>
        <columns>ParentTerritory__c</columns>
        <columns>Role__c</columns>
        <columns>TerritoryType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Realignment</label>
    </listViews>
    <listViews>
        <fullName>Territories</fullName>
        <columns>NAME</columns>
        <columns>TerritoryName__c</columns>
        <columns>Channel__c</columns>
        <columns>TerritoryType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Role__c</columns>
        <columns>RoleGroupId__c</columns>
        <columns>RoleId__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>startsWith</operation>
            <value>INS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Territories INSTL</label>
    </listViews>
</CustomObject>